<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/reservation_id">

    <fragment
        android:id="@+id/reservation_id"
        android:name="com.mad.poleato.Reservation.ReservationFragment"
        android:label="@string/title_actionbar_reservation"
        tools:layout="@layout/reservation_frag_layout" >
        <action
            android:id="@+id/action_reservation_id_to_signInActivity"
            app:destination="@id/signInActivity"
            app:popUpTo="@+id/signInActivity"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_reservation_id_to_mapsFragment_id"
            app:destination="@id/mapsFragment_id" />
    </fragment>


    <fragment
        android:id="@+id/daily_offer_id"
        android:name="com.mad.poleato.DailyOffer.DailyOfferFragment"
        android:label="@string/title_actionbar_dailyoffer"
        tools:layout="@layout/dailyoffer_frag_layout">
        <action
            android:id="@+id/action_daily_offer_to_addFoodFragment"
            app:destination="@id/addFoodFragment_id"
            app:enterAnim="@anim/fui_slide_in_right"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_daily_offer_id_to_editFoodFragment_id"
            app:destination="@id/editFoodFragment_id"
            app:enterAnim="@anim/fui_slide_in_right"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_daily_offer_id_to_signInActivity"
            app:destination="@id/signInActivity"
            app:popUpTo="@+id/signInActivity"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/addFoodFragment_id"
        android:name="com.mad.poleato.DailyOffer.AddFood.AddFoodFragment"
        android:label="@string/title_actionbar_add_food"
        tools:layout="@layout/add_food_fragment">
        <action
            android:id="@+id/action_addFoodFragment_to_daily_offer"
            app:destination="@id/daily_offer_id" />
    </fragment>
    <fragment
        android:id="@+id/editFoodFragment_id"
        android:name="com.mad.poleato.DailyOffer.EditFood.EditFoodFragment"
        android:label="@string/title_actionbar_edit_food"
        tools:layout="@layout/edit_food_fragment">
        <action
            android:id="@+id/action_editFoodFragment_id_to_daily_offer_id"
            app:destination="@id/daily_offer_id" />
        <argument
            android:name="id"
            app:argType="string" />
        <argument
            android:name="category"
            app:argType="string" />
    </fragment>


    <fragment
        android:id="@+id/account_id"
        android:name="com.mad.poleato.Account.AccountFragment"
        android:label="@string/title_actionbar_account"
        tools:layout="@layout/account_frag_layout">
        <action
            android:id="@+id/action_account_id_to_editProfile_id"
            app:destination="@id/editProfile_id"
            app:enterAnim="@anim/fui_slide_in_right"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_account_id_to_signInActivity"
            app:destination="@id/signInActivity"
            app:popUpTo="@+id/signInActivity"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/editProfile_id"
        android:name="com.mad.poleato.Account.EditProfileFragment"
        android:label="@string/title_actionbar_edit_account"
        tools:layout="@layout/edit_account_layout">
        <action
            android:id="@+id/action_editProfile_id_to_account_id"
            app:destination="@id/account_id"
            app:popUpTo="@+id/account_id"
            app:popUpToInclusive="true" />
    </fragment>
    <activity
        android:id="@+id/signInActivity"
        android:name="com.mad.poleato.SignInActivity"
        android:label="signin_layout"
        tools:layout="@layout/signin_layout" />


    <fragment
        android:id="@+id/mapsFragment_id"
        android:name="com.mad.poleato.MapsFragment"
        android:label="MapsFragment"
        tools:layout="@layout/activity_maps" >
        <action
            android:id="@+id/action_mapsFragment_id_to_reservation_id"
            app:destination="@id/reservation_id"
            app:popUpTo="@+id/reservation_id"
            app:popUpToInclusive="true" />
        <argument
            android:name="logged_id"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="reservation"
            app:argType="com.mad.poleato.Reservation.Reservation"
            app:nullable="true" />
    </fragment>

</navigation>