<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eeeeee"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/childView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"


        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/deliveryCost_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/phone"
                android:src="@drawable/ic_baseline_directions_bike_24px"
                app:layout_constraintEnd_toStartOf="@id/rider_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rider_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/rider_id"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/deliveryCost_icon"
                app:layout_constraintEnd_toStartOf="@id/rider_tv"
                app:layout_constraintStart_toEndOf="@id/deliveryCost_icon"
                app:layout_constraintTop_toTopOf="@id/deliveryCost_icon" />

            <TextView
                android:id="@+id/rider_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/rider_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rider_label"
                app:layout_constraintTop_toTopOf="@id/rider_label" />

            <TextView
                android:id="@+id/distance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/distance"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/myButton"
                app:layout_constraintEnd_toStartOf="@id/distance_tv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/rider_label"
                app:layout_constraintTop_toBottomOf="@id/rider_label" />

            <TextView
                android:id="@+id/distance_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/distance_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/rider_tv"
                app:layout_constraintTop_toTopOf="@id/distance_label" />

            <Button
                android:id="@+id/myButton"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_style"
                android:focusable="false"
                android:padding="7dp"
                android:text="@string/select_rider"
                android:textColor="@color/colorBodyPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/distance_label" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>