<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/groupLinearLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:orientation="vertical"
    android:background="#ECECEC"
    tools:context=".Reservation.ReservationFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Name and surname client -->
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/reservationIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/reservation_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/dateLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.478"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/date"
                android:textColor="@color/colorTextField"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tvDateField"
                app:layout_constraintEnd_toStartOf="@id/timeLabel"
                app:layout_constraintStart_toEndOf="@id/reservationIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:maxLength="40"
                android:singleLine="true"
                android:textColor="@color/colorTextTitle"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvTimeField"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/dateLabel"
                app:layout_constraintTop_toBottomOf="@id/dateLabel" />

            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/time"
                android:textColor="@color/colorTextField"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tvTimeField"
                app:layout_constraintEnd_toStartOf="@id/statusLabel"
                app:layout_constraintStart_toEndOf="@id/dateLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTimeField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:maxLength="40"
                android:singleLine="true"
                android:textColor="@color/colorTextTitle"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvStatusField"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/timeLabel"
                app:layout_constraintTop_toBottomOf="@id/timeLabel" />

            <TextView
                android:id="@+id/statusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:maxLength="40"
                android:singleLine="true"
                android:text="@string/status"
                android:textColor="@color/colorTextField"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tvStatusField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/timeLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvStatusField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:maxLength="40"
                android:singleLine="true"
                android:textColor="@color/colorTextTitle"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/statusLabel"
                app:layout_constraintTop_toBottomOf="@id/statusLabel" />

        </android.support.constraint.ConstraintLayout>


        <Button
            android:id="@+id/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            android:background="@drawable/ripple_green"
            android:focusable="false"
            android:padding="16dp"
            android:text="@string/button_reservation"
            android:textColor="@color/colorBodyPrimary"
            />
    </LinearLayout>
</LinearLayout>